--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,16 +6,20 @@
 
     <color name="semitransparent">#64696969</color>
     <color name="semitransparent_darker">#a0696969</color>
-    <color name="lightgrey">#7F7F7F</color>
+    <color name="bg_trans">#c8000000</color>
+    <color name="bg_trans2">#96000000</color>
 
-    <color name="colorwhitish">#FFFFFF</color>
+    <color name="lightgrey">#7F7F7F</color>
     <color name="colorgreyish">#d7d7d7</color>
     <color name="darkgreyish">#1e1e1e</color>
+    <color name="greyish">#646464</color>
+
+    <color name="colorwhitish">#FFFFFF</color>
     <color name="bluish">#1212fa</color>
+    <color name="blue">#3F51B5</color>
     <color name="light_bluish">#2C80F0</color>
 
     <color name="contentDividerLine">#e0e0e0</color>
-    <color name="greyish">#646464</color>
     <color name="darkbluish">#4b4bfd</color>
 
     <color name="colortext">#100b20</color>
