--- a/app/src/main/res/layout/notif_list.xml
+++ b/app/src/main/res/layout/notif_list.xml
@@ -9,7 +9,7 @@
     >
 
     <ImageButton
-        android:id="@+id/ce_imgBtnClose"
+        android:id="@+id/ce2_imgBtnClose"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
@@ -20,21 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
-
-    <com.airbnb.lottie.LottieAnimationView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/notification"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ce_imgBtnClose" />
 
     <TextView
         android:id="@+id/textView4"
@@ -48,15 +33,15 @@
         android:text="My Notifications"
         android:textColor="@color/white"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@id/main_list"
+        app:layout_constraintBottom_toTopOf="@id/ce_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.033"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ce_imgBtnClose"
+        app:layout_constraintTop_toBottomOf="@+id/ce2_imgBtnClose"
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/main_list"
+        android:id="@+id/ce_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
